--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 /* Reset ***********************************/
 * {
   margin: 0;
+  margin: 0;
   padding: 0;
   font-family: sans-serif;
 }
@@ -26,10 +27,22 @@
 } */
 /* ************************************************ */
 body{
-  background-image: url(../image/disfruta.webp);
   /* background-repeat: no-repeat; */
   background-attachment: fixed;
   background-size: cover;
+  background-color:#83777d
+}
+
+.videoramones{
+  background-color: #83777d;
+}
+article {
+  margin: 2vh;
+  padding: 2vh;
+
+}
+.historia{ margin: 20vh;
+
 }
 /* hover menu ******************************/
 .efecto{
@@ -37,7 +50,7 @@ body{
 }
 .efecto :hover{
    transform:scale(1.5,1.5) ;
-   background:#f1c40f ;
+   background:#da0789 ;
    border-radius: 7px;
    margin: 0px, 5px, 0px, 5px;
 }
@@ -55,75 +68,8 @@ main {
 /* ************************************************ */
 
 
-/* Tarjetas flip *************************************************** */
-.card {
-  width: 300px;
-  height: 350px;
-  position: relative;
-}
-.card .face {
-  /*MIXIN*/
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  backface-visibility: hidden;
-  border-radius: 10px;
-  overflow: hidden;
-  transition: 0.5s;
-}
-.card .front {
-  transform: perspective(600px) rotatey(180deg);
-  box-shadow: 0 5px 10px #000;
-}
-.card .front img {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  object-fit: cover;
-}
-.card .front h2 {
-  width: 100%;
-  height: 45px;
-  position: absolute;
-  bottom: 0;
-  line-height: 45px;
-  color: #f3f3f3;
-  background: rgba(0, 0, 0, 0.4);
-  text-align: center;
-}
-.card .back {
-  transform: perspective(600) rotatey(0deg);
-  background: rgb(3, 35, 54);
-  padding: 15px;
-  color: #f3f3f3;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  text-align: center;
-  box-shadow: 0 5px 10px #000;
-}
-.card .back .link {
-  border-top: solid 1px #f3f3f3;
-  height: 50px;
-  line-height: 50px;
-}
-.card .back .link a {
-  color: #f3f3f3;
-}
-.card .back h2 {
-  font-size: 30px;
-  margin-top: 20px;
-  letter-spacing: 2px;
-}
-.card .back p {
-  letter-spacing: 1px;
+.footer{ align-items: center;
+
 }
 
-.card:hover .front {
-  transform: perspective(600px) rotatey(360deg);
-}
 
-.card:hover .back {
-  transform: perspective(600px) rotatey(180deg);
-}
-/*# sourceMappingURL=style.css.map */
