--- a/css/style.css
+++ b/css/style.css
@@ -19,35 +19,46 @@
 .tamaño {
   height: 70px;
 }
-/* background ************************************** */
-/* body{
-  background-image: linear-gradient(to right top, #f1c40f, #a2d349, #50d689, #00d0bf, #00c5de, #3dc4eb, #63c2f4, #84bff7, #b0ccfa, #d1dbfb, #ebecfd, #ffffff);
-  
-  background-repeat: no-repeat;
-} */
-/* ************************************************ */
+
 body{
   /* background-repeat: no-repeat; */
   background-attachment: fixed;
   background-size: cover;
-  background-color:#83777d
+  background-color:hsl(330, 20%, 90%)
 }
 
-.Ramones{
-  margin-left: 40%;
+.intro{
+  margin: 2vh;
+  padding: 2vh;
+  font-style: italic;
   }
 
-  .noticiasramoneras{
-    margin-left: 40%;
+  
+
+  .Ramones{
+    margin-left: 65vh;
+    color: #da0789;
+  }
+
+.div{
+    margin-left: 65vh;
+    color: #da0789;
 
   }
 
 
 
+
+
+.h3{
+  margin-left: 65vh;
+  color: #da0789;
+}
 
 
 .videoramones{
-  background-color: #83777d;
+  background-color:hsl(330, 20%, 90%)
+  
 }
 article {
   margin: 2vh;
@@ -66,6 +77,7 @@ article {
     border-radius: 7px;
     margin: 0px, 5px, 0px, 5px;
     width: 100%;
+    font-style: italic;
 }
 /* hover menu ******************************/
 .efecto{
@@ -92,8 +104,9 @@ main {
 
 
 footer{
- margin-left: 40%;
-
+  margin-left: 40%;
+  color:fuchsia;
+  font-style: italic;
 }
 
 
