--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,10 @@
   font-family: sans-serif;
 }
 /* *************************************** */
-.logo {
-  width: 12vw;
+.carousel-inner{
+  margin: 2vh;
+  padding: 2vh;
+  align-self: auto;
 }
 
 .iconos {
@@ -47,14 +49,21 @@ body{
   }
 
 
-
+.sitiosamigos{
+  color: #da0789;
+  background-color: aliceblue;
+  font-style: italic;
+}
 
 
 .h3{
   margin-left: 65vh;
   color: #da0789;
 }
-
+.listgroup{
+  color:#da0789;
+  background-color: aliceblue;
+}
 
 .videoramones{
   background-color:hsl(330, 20%, 90%)
