--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,12 @@
   }
   /* *************************************** */
   
+
+
+
+
+
+
   .iconos {
     width: 36px;
     height: 30px;
@@ -14,12 +20,12 @@
   .tamaño {
     height: 70px;
   }
-  /* background ************************************** */
-  /* body{
-    background-image: linear-gradient(to right top, #f1c40f, #a2d349, #50d689, #00d0bf, #00c5de, #3dc4eb, #63c2f4, #84bff7, #b0ccfa, #d1dbfb, #ebecfd, #ffffff);
-    
-    background-repeat: no-repeat;
-  } */
+  .head {
+    background-color:grey ;
+    font-size: medium;
+    font-family: 'Times New Roman', Times, serif;
+  }
+  
   /* ************************************************ */
   body{
     /* background-repeat: no-repeat; */
