--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,20 @@
   font-family: sans-serif;
 }
 /* *************************************** */
+
+.head {
+  background-color:grey ;
+  font-size: medium;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+
+
+
+
+
+
+
 .carousel-inner{
   margin: 2vh;
   padding: 2vh;
@@ -23,7 +37,7 @@
 }
 
 body{
-  /* background-repeat: no-repeat; */
+
   background-attachment: fixed;
   background-size: cover;
   background-color:hsl(330, 20%, 90%)
@@ -92,12 +106,7 @@ article {
 .efecto{
   transition: 1.3s;
 }
-.efecto :hover{
-   transform:scale(1.5,1.5) ;
-   background:#da0789 ;
-   border-radius: 7px;
-   margin: 0px, 5px, 0px, 5px;
-}
+
 /* ************************************** */
 main {
   display: flex;
