--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,7 +43,7 @@
     
   
     .Ramones{
-      margin-left: 65vh;
+      margin-left: 2vh;
       color: #da0789;
     }
   
@@ -52,8 +52,12 @@
       color: #da0789;
   
     }
-  
-  
+    .carrusel {
+      margin-left: 2vh;
+      margin-right: 2vh;
+    }
+    
+    
   
   
   
