--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,11 @@ main {
 /* ************************************************ */
 footer {
   margin-left: 40%;
-  color: fuchsia;
+  color:#da0789;;
 }
+
+
+
+
 
 /*# sourceMappingURL=main.css.map */
