--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,122 +5,7 @@
     font-family: sans-serif;
   }
   /* *************************************** */
+ 
+  $colortext:#da0789
   
-
-
-
-
-
-
-  .iconos {
-    width: 36px;
-    height: 30px;
-  }
-  
-  .tamaño {
-    height: 70px;
-  }
-  .head {
-    background-color:grey ;
-    font-size: medium;
-    font-family: 'Times New Roman', Times, serif;
-  }
-  
-  /* ************************************************ */
-  body{
-    /* background-repeat: no-repeat; */
-    background-attachment: fixed;
-    background-size: cover;
-    background-color:hsl(330, 20%, 90%)
-  }
-  
-  .intro{
-    margin: 2vh;
-    padding: 2vh;
-    font-style: italic;
-    }
-  
-    
-  
-    .Ramones{
-      margin-left: 2vh;
-      color: #da0789;
-    }
-  
-  .div{
-      margin-left: 65vh;
-      color: #da0789;
-  
-    }
-    .carrusel {
-      margin-left: 2vh;
-      margin-right: 2vh;
-    }
-    
-    
-  
-  
-  
-  .h3{
-    margin-left: 65vh;
-    color: #da0789;
-  }
-  
-  
-  .videoramones{
-    background-color:hsl(330, 20%, 90%)
-    
-  }
-  article {
-    margin: 2vh;
-    padding: 2vh;
-  
-  }
-  .galeria { 
-    transform:scale(1.5,1.5) ;
-    border-radius: 7px;
-    margin: 0px, 5px, 0px, 5px;
-    width: 100%;
-  }
-  .historia{ 
-      margin: 20vh;
-      transform:scale(1.5,1.5);
-      border-radius: 7px;
-      margin: 0px, 5px, 0px, 5px;
-      width: 100%;
-      font-style: italic;
-  }
-  /* hover menu ******************************/
-  .efecto{
-    transition: 1.3s;
-  }
-  .efecto :hover{
-     transform:scale(1.5,1.5) ;
-     background:#da0789 ;
-     border-radius: 7px;
-     margin: 0px, 5px, 0px, 5px;
-  }
-  /* ************************************** */
-  main {
-    display: flex;
-    align-items: center;
-    min-height: 80vh;
-    justify-content: center;
-  }
-  /* Carrusel*************************************** */
-  .carrusel{
-    height: 75vh;
-  }
-  /* ************************************************ */
-  
-  
-  footer{
-   margin-left: 40%;
-   color:fuchsia;
-  }
-
-
-
-
-
-  
+  $bkcolor
