--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -11,5 +11,18 @@ body{
     background-size: cover;
     background-color: aliceblue
   }
+h1{
+    margin: 2vh;
+   padding: 2vh;
+   font-style: italic;
+         }
+h3{
+margin-left: 2vh;
+color: #da0789;
+         }
+h2{ 
+  margin: 2vh;
+  padding: 2vh;
+  font-style: italic;}
 
   
