--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,20 +1,9 @@
-h1{
-    margin: 2vh;
-   padding: 2vh;
-   font-style: italic;
-         }
-         
-         
-         
-         
-         h3{
-           margin-left: 2vh;
-           color: #da0789;
-         }
-         
-         h2{
-           margin: 2vh;
-           padding: 2vh;
-           font-style: italic;
-           color: #da0789;
-         }
+$color:  #da0789;
+$fontstyle:italic;
+$marginh1: 2vh;
+$paddingh1: 2vh;
+$marginh2: 2vh;
+$paddingh2:2vh;
+$marginh3: 2vh;
+
+
