--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,18 @@
+nav li {
+  margin: auto;
+  padding: auto;
+  font-size: larger;
+}
+
+/* Reset ***********************************/
+* {
+  margin: 0;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+/* *************************************** */
 main {
   display: flex;
   align-items: center;
