--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,3 +1,12 @@
+/* Reset ***********************************/
+* {
+  margin: 0;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+/* *************************************** */
+
 main {
     display: flex;
     align-items: center;
