--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,11 @@
-@import "_variables.scss";
-@import "_nav.scss";
-@import "_header.scss";
-@import "_galeria.scss";
-
-@import "_footer.scss"; 
+@import "./variables";
+@import "./nav";
+@import "./header";
+@import "./articles";
+@import "./galeria";
+@import "./listadoamigos ";
+@import "./formulario";
+@import "./footer"; 
 
 
 
