--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,6 @@
 footer{
     margin-left: 40%;
-    color:#da0789;
-    font-style: italic;
+    color:$color;
+    font-style: $fontstyle;
   }
       
