--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,9 +1,6 @@
 $color:  #da0789;
 $fontstyle:italic;
-$marginh1: 2vh;
-$paddingh1: 2vh;
-$marginh2: 2vh;
-$paddingh2:2vh;
-$marginh3: 2vh;
+$margin: 2vh;
+$padding: 2vh;
 $background-color: aliceblue
 
