--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,144 @@
-/* Error: expected ":".
- *    ,
- * 14 |     $background-color
- *    |                      ^
- *    '
- *   scss\_galeria.scss 14:22  @import
- *   scss\main.scss 5:9        root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: 'Error: expected ":".\a    \2577 \a 14 \2502      $background-color\d\a    \2502                       ^\a    \2575 \a   scss\\_galeria.scss 14:22  @import\a   scss\\main.scss 5:9        root stylesheet';
+nav li {
+  margin: auto;
+  padding: auto;
+  font-size: larger;
 }
+
+/* Reset ***********************************/
+* {
+  margin: 0;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+/* *************************************** */
+main {
+  display: flex;
+  align-items: center;
+  min-height: 80vh;
+  justify-content: center;
+}
+
+body {
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: aliceblue;
+}
+
+h1 {
+  margin: 2vh;
+  padding: 2vh;
+  font-style: italic;
+}
+
+h3 {
+  margin-left: 2vh;
+  color: #da0789;
+}
+
+h2 {
+  margin: 2vh;
+  padding: 2vh;
+  font-style: 2vh;
+}
+
+.intro {
+  margin: 2vh;
+  padding: 2vh;
+  font-style: italic;
+}
+
+h1 {
+  margin: 2vh;
+  padding: 2vh;
+  font-style: italic;
+}
+
+h3 {
+  margin-left: 2vh;
+  color: #da0789;
+}
+
+h2 {
+  margin: 2vh;
+  padding: 2vh;
+  font-style: italic;
+  color: #da0789;
+}
+
+.texto {
+  margin: 2vh;
+  padding: 2vh;
+  font-style: italic;
+}
+
+article {
+  margin: 2vh;
+  padding: 2vh;
+}
+
+.noticias {
+  margin: 2vh;
+  padding: 2vh;
+  font-style: italic;
+}
+
+.historia {
+  margin: 20vh;
+  transform: scale(1.5, 1.5);
+  border-radius: 7px;
+  margin: 0px, 5px, 0px, 5px;
+  width: 100%;
+  font-style: italic;
+}
+
+.titulohistoria {
+  margin: 2vh;
+  padding: 2vh;
+  font-style: italic;
+  color: #da0789;
+}
+
+.Ramones {
+  margin-left: 2vh;
+  color: #da0789;
+  font-style: italic;
+}
+
+.carousel-inner {
+  margin: 2vh;
+  padding: 2vh;
+  align-self: auto;
+}
+
+.galeria {
+  transform: scale(1.5, 1.5);
+  border-radius: 7px;
+  margin: 0px, 5px, 0px, 5px;
+  width: 100%;
+}
+
+.videoramones {
+  background-color: aliceblue;
+}
+
+div ul {
+  color: #da0789;
+  margin: 2vh;
+  padding: 2vh;
+  font-size: x-large;
+}
+
+.contactate {
+  margin: 2vh;
+  color: #da0789;
+}
+
+footer {
+  margin-left: 40%;
+  color: #da0789;
+  font-style: italic;
+}
+
+/*# sourceMappingURL=main.css.map */
