--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -1,6 +1,6 @@
 .carousel-inner{
-    margin: 2vh;
-    padding: 2vh;
+    margin: $margin;
+    padding: $padding;
     align-self: auto;
   }
 
@@ -11,5 +11,5 @@
     width: 100%;
   }
   .videoramones {
-    $background-color
+   background-color:$background-color ; 
 }
