--- a/scss/_listadoamigos.scss
+++ b/scss/_listadoamigos.scss
@@ -1,9 +1,9 @@
 div{
     ul{
         color: $color;
-        $fontstyle:italic;
-        margin: 2vh;
-        padding: 2vh;
+        $fontstyle:$fontstyle;
+        margin:  $margin;
+        padding: $padding;
         font-size: x-large;
         
     }
