--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ h2{
 
 .listgroup{
   color:#da0789;
-  background-color: rgb(16, 74, 124)
+  background-color: aliceblue
 }
 
 .videoramones{
@@ -106,7 +106,7 @@ main {
 /* ************************************************ */
 
 footer{
-  margin-left: 40%;
+  margin-left: 10%;
   color:#da0789;
   font-style: italic;
 }
