Haciendo cambios en el navbar

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,12 @@ h2{
   width: 100%;
 }
 
+.logo{
+  height: 25%;
+  width: 50%;
+  margin-left: 15vh;
+}
+
 
 /* ************************************** */
 main {
