--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,12 @@ h2{
   margin-left: 15vh;
 }
 
+.texto{ 
+  margin-left: 2vh;
+  margin-right: 2vh;
+
+
+}
 
 /* ************************************** */
 main {
