--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@
   align-self: auto;
 }
 
+.wikipediaramonera{
+  margin: 2vh;
+}
+
+
 body{
 
   background-attachment: fixed;
@@ -84,6 +89,7 @@ h2{
   background-color: aliceblue
   
 }
+
 
 
 
