--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,12 @@
   padding: 1vh;
 }
 
+.titulo{
+  color:#da0789;
+  background-color:aliceblue;
+
+}
+
 body{
 
   background-attachment: fixed;
@@ -36,12 +42,14 @@ body{
   margin: 2vh;
   padding: 2vh;
   font-style: italic;
-  }
+  float: left;
+ }
 
   .texto{
       margin: 2vh;
       padding: 2vh;
       font-style: italic;
+
    
   }
   .noticias{ 
@@ -56,6 +64,7 @@ body{
     color: #da0789;
     
   }
+
 h1{
   margin: 2vh;
   padding: 2vh;
@@ -77,7 +86,7 @@ h3{
 }
 
 h2{
-  margin: 2vh;
+  margin-left: 20vh;
   padding: 2vh;
   font-style: italic;
   color: #da0789;
