--- a/scss/Estilos.scss
+++ b/scss/Estilos.scss
@@ -1,11 +1,11 @@
-@import "./variables";
-@import "./nav";
-@import "./header";
-@import "./articles";
-@import "./galeria";
-@import "./listadoamigos";
-@import "./formulario";
-@import "./footer"; 
+@import "variables";
+@import "nav";
+@import "header";
+@import "articles";
+@import "galeria";
+@import "listadoamigos";
+@import "formulario";
+@import "footer"; 
 
 
 
