--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -13,7 +13,12 @@ nav li {
 }
 
 /* *************************************** */
-
+main {
+  display: flex;
+  align-items: center;
+  min-height: 80vh;
+  justify-content: center;
+}
 
 body {
   background-attachment: fixed;
@@ -25,7 +30,6 @@ h1 {
   margin: 2vh;
   padding: 2vh;
   font-style: italic;
-  font-size: larger;
 }
 
 h3 {
@@ -45,7 +49,11 @@ h2 {
   font-style: italic;
 }
 
-
+h1 {
+  margin: 2vh;
+  padding: 2vh;
+  font-style: italic;
+}
 
 h3 {
   margin-left: 2vh;
@@ -77,13 +85,12 @@ article {
 }
 
 .historia {
-  margin: 2vh;
+  margin: 20vh;
   transform: scale(1.5, 1.5);
   border-radius: 7px;
   margin: 0px, 5px, 0px, 5px;
   width: 100%;
   font-style: italic;
-  
 }
 
 .titulohistoria {
@@ -94,7 +101,7 @@ article {
 }
 
 .Ramones {
-  margin-left: 10vh;
+  margin-left: 2vh;
   color: #da0789;
   font-style: italic;
 }
@@ -130,7 +137,7 @@ div ul {
 
 footer {
   margin-left: 40%;
-  color:black;
+  color: #da0789;
   font-style: italic;
 }
 
